// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`embeddings 1`] = `
{
  "body": "{"model":"nomic-embed-text","input":"hi"}",
  "headers": {},
  "method": "POST",
  "url": "http://localhost:11434/api/embed",
}
`;

exports[`embeddings 2`] = `
{
  "body": "{"model":"text-embedding-ada-002","input":"hi"}",
  "headers": {
    "authorization": "Bearer <key>",
    "content-type": "application/json",
  },
  "method": "POST",
  "url": "https://api.openai.com/v1/embeddings",
}
`;

exports[`embeddings 3`] = `
{
  "body": "{"model":"voyage-3-lite","input":"hi"}",
  "headers": {
    "authorization": "Bearer <key>",
    "content-type": "application/json",
  },
  "method": "POST",
  "url": "https://api.voyageai.com/v1/embeddings",
}
`;

exports[`dump 1`] = `
{
  "cost": undefined,
  "input": {
    "model": "nomic-embed-text",
    "value": "hi",
  },
  "options": {},
  "output": undefined,
  "performance": undefined,
  "provider": "ollama",
  "type": "embedding",
  "version": "0.3.0",
}
`;

exports[`dump 2`] = `
{
  "cost": undefined,
  "input": {
    "model": "text-embedding-ada-002",
    "value": "hi",
  },
  "options": {
    "apiKey": "<key>",
  },
  "output": undefined,
  "performance": undefined,
  "provider": "openai",
  "type": "embedding",
  "version": "0.3.0",
}
`;

exports[`dump 3`] = `
{
  "cost": undefined,
  "input": {
    "model": "voyage-3-lite",
    "value": "hi",
  },
  "options": {
    "apiKey": "<key>",
  },
  "output": undefined,
  "performance": undefined,
  "provider": "voyage",
  "type": "embedding",
  "version": "0.3.0",
}
`;
